# moq-interop

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
config/: docker-compose.yml  implementations.json
docs/: testing.md
moq-interop/: runner.py
moq_interop/: runner.py  transport.py
tests/: test_runner.py  test_transport.py
tests/fixtures/: implementations.json
