[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "moq-interop"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.3.2",
]

[tool.setuptools]
packages = ["moq_interop"]

[tool.coverage.run]
source = ["moq-interop"]
